WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122113
Pass VM instead of JSGlobalObject to RegExp constructor.
https://bugs.webkit.org/show_bug.cgi?id=122113
Summary
Pass VM instead of JSGlobalObject to RegExp constructor.
Andreas Kling
Reported
2013-09-30 11:06:02 PDT
Pass VM instead of JSGlobalObject to RegExp constructor.
Attachments
Patch
(11.25 KB, patch)
2013-09-30 11:18 PDT
,
Andreas Kling
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
Patch
(11.25 KB, patch)
2013-09-30 11:24 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-30 11:18:14 PDT
Created
attachment 213015
[details]
Patch
Early Warning System Bot
Comment 2
2013-09-30 11:22:54 PDT
Comment on
attachment 213015
[details]
Patch
Attachment 213015
[details]
did not pass qt-ews (qt): Output:
http://webkit-queues.appspot.com/results/2782104
Andreas Kling
Comment 3
2013-09-30 11:24:14 PDT
Created
attachment 213016
[details]
Patch
WebKit Commit Bot
Comment 4
2013-09-30 11:57:35 PDT
Comment on
attachment 213016
[details]
Patch Clearing flags on attachment: 213016 Committed
r156668
: <
http://trac.webkit.org/changeset/156668
>
WebKit Commit Bot
Comment 5
2013-09-30 11:57:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug